Adds initial version of text-field component

--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -1,8 +1,19 @@
 <template>
 
   <!--Requirements-->
-  <input> </input>
-  <a></a>
+  <require from="./text-field.css"></require>
 
-  
+  <!--Child components-->
+
+  <div class="text-field__container">
+    <div class="text-field__label-container mb-2">
+      <p class="text-field__label-element m-0">${label}</p>
+      <i class="text-field__icon-element m-0"></i>
+    </div>
+    <div class="text-field__input-container">
+      <input class="text-field__input-element"></input>
+    </div>
+    
+  </div>
+
 </template>
