--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -7,8 +7,10 @@
 
   <div class="text-field__container">
     <div class="text-field__label-container mb-2">
-      <p class="text-field__label-element m-0">${label}</p>
-      <i class="text-field__icon-element m-0"></i>
+      <p class="text-field__label-element m-0 mr-auto">${label}</p>
+      <div class="text-field__icon-container">
+        <i class="text-field__icon-element far fa-question-circle"></i>
+      </div>
     </div>
     <div class="text-field__input-container">
       <input class="text-field__input-element"></input>
