Add style and attributes

--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -8,14 +8,13 @@
   <div class="text-field__container">
     <div class="text-field__label-container mb-2">
       <p class="text-field__label-element m-0 mr-auto">${label}</p>
-      <div class="text-field__icon-container">
+      <div class="text-field__icon-container" click.trigger="tooltipClicked()">
         <i class="text-field__icon-element far fa-question-circle"></i>
       </div>
     </div>
     <div class="text-field__input-container">
-      <input class="text-field__input-element"></input>
+      <input class="text-field__input-element" placeholder.to-view="placeholder"></input>
     </div>
-    
   </div>
 
 </template>
