--- a/src/components/text-field.css
+++ b/src/components/text-field.css
@@ -38,10 +38,18 @@
   margin-left: auto;
 }
 
-.text-field__icon-element {
+.text-field__container .text-field__icon-container:hover {
+  cursor: pointer;
+}
+
+.text-field__container .text-field__icon-element {
   margin-top: 4px;
   font-size: 19px;
   color: rgba(5, 5, 5, 0.61);
+}
+
+.text-field__tooltip-element-label {
+  font-weight: bold;
 }
 
 .text-field__label-container .text-field__label-element {
