Add suffix container

--- a/src/components/text-field.css
+++ b/src/components/text-field.css
@@ -81,8 +81,6 @@
 }
 
 .text-field__icon-clear {
-  margin-top: 7px;
-  margin-right: 3px;
   font-size: 22px;
   color: rgba(5, 5, 5, 0.61);
 }
@@ -113,6 +111,13 @@
 .text-field__container input:focus {
   outline: none;
 }
+
+.text-field__container div[slot="suffix-container"] {
+  max-height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 
 @keyframes textFieldHighlight {
   from {
