--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="text-field__input-container">
-      <input ref="textFieldInputElement" class="text-field__input-element" placeholder.to-view="placeholder" value.two-way="value" type="${allowOnlyNumbers ? 'number' : 'text'}"></input>
+      <input ref="textFieldInputElement" class="text-field__input-element" placeholder.to-view="placeholder" value.two-way="value" type="${allowOnlyNumbers === true || allowOnlyNumbers === 'true' ? 'number' : 'text'}"></input>
       <div class="text-field__input-icons-container d-flex flex-row-reserve ml-auto">
         <a class="text-field__transparent-bg-color d-flex align-items-center m-2" if.bind="showClearButton" click.trigger="clearButtonClicked()"><i class="text-field__icon-clear fas fa-times text-field__transparent-bg-color text-field__pointer-cursor"></i></a>
         <slot name="suffix-container">
