Add styles and change attribute features

--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -1,33 +1,48 @@
 <template>
-
   <!--Requirements-->
   <require from="./text-field.css"></require>
 
   <!--Child components-->
-
   <div class="text-field__container">
     <div class="text-field__label-container mb-2">
       <p class="text-field__label-element m-0 mr-auto">${label}</p>
-      <div class="text-field__icon-container text-field__pointer-cursor" click.trigger="tooltipClicked()">
+      <div
+        class="text-field__icon-container text-field__pointer-cursor"
+        click.trigger="tooltipClicked()"
+      >
         <i class="text-field__icon-element far fa-question-circle"></i>
       </div>
     </div>
     <div class="text-field__input-container">
-      <input ref="textFieldInputElement" class="text-field__input-element" placeholder.to-view="placeholder" value.two-way="value" type="${allowOnlyNumbers === true || allowOnlyNumbers === 'true' ? 'number' : 'text'}"></input>
-      <div class="text-field__input-icons-container d-flex flex-row-reserve ml-auto">
-        <a class="text-field__transparent-bg-color d-flex align-items-center m-2" if.bind="showClearButton" click.trigger="clearButtonClicked()"><i class="text-field__icon-clear fas fa-times text-field__transparent-bg-color text-field__pointer-cursor"></i></a>
-        <slot name="suffix-container">
-        </slot>
+      <input
+        ref="textFieldInputElement"
+        class="text-field__input-element"
+        disabled="${disable === true ? true : undefined}"
+        placeholder.to-view="placeholder"
+        value.two-way="value"
+        type="${allowOnlyNumbers === true ? 'number' : 'text'}"
+      />
+      <div
+        class="text-field__input-icons-container d-flex flex-row-reserve ml-auto"
+      >
+        <a
+          class="text-field__transparent-bg-color d-flex align-items-center m-2 text-decoration-none"
+          if.bind="showClearButton"
+          click.trigger="clearButtonClicked()"
+          ><i
+            class="text-field__icon-clear fas fa-times text-field__transparent-bg-color text-field__pointer-cursor"
+          ></i
+        ></a>
+        <slot name="suffix-container"> </slot>
       </div>
     </div>
     <hr
-    class="m-0 p-0 ${(errorMessage !== null && typeof errorMessage !== 'undefined' && !valid) && hasBeenEdited ? 'text-field__red-border' : 'text-field__normal-border' }"
-    >
+      class="m-0 p-0 ${errorMessage && hasBeenEdited ? 'text-field__red-border' : 'text-field__normal-border' }"
+    />
     <div
-        class="${(errorMessage !== null && typeof errorMessage !== 'undefined') && hasBeenEdited ? 'text-field__error-message-container-active' : 'text-field__error-message-container-inactive' } m-0 p-0 mt-1"
-      >
-        <p class="text-field__error-message m-0 p-0">${errorMessage}&nbsp;</p>
-      </div>
+      class="${errorMessage && hasBeenEdited ? 'text-field__error-message-container-active' : 'text-field__error-message-container-inactive' } m-0 p-0 mt-1"
+    >
+      <p class="text-field__error-message m-0 p-0">${errorMessage}&nbsp;</p>
+    </div>
   </div>
-
 </template>
