Replace listener with Aurelia bind

--- a/src/components/checkbox.html
+++ b/src/components/checkbox.html
@@ -4,10 +4,19 @@
 
   <!--Content-->
   <div class="checkbox__container d-flex flex-row align-items-center">
-    <input class="checkbox__input" type="checkbox" id="checkboxInput" ref="checkboxInput" value.bind="value">
-    <label class="checkbox__label" for="checkboxInput">${name}</label>
+    <label class="checkbox__label d-flex flex-row align-items-center m-0">
+      <input
+        class="checkbox__input"
+        type="checkbox"
+        ref="checkboxInput"
+        checked.bind="checked"
+      />
+      ${name}
+    </label>
   </div>
-  <div class="checkbox__error-message-container ${errorMessage ? 'error-message-active' : ''}">
+  <div
+    class="checkbox__error-message-container ${errorMessage ? 'error-message-active' : ''}"
+  >
     <p class="checkbox__error-message">${errorMessage}</p>
   </div>
 </template>
