--- a/src/components/text-field.html
+++ b/src/components/text-field.html
@@ -33,7 +33,7 @@
       >
         <a
           class="text-field__transparent-bg-color d-flex align-items-center m-2 text-decoration-none"
-          if.bind="showClearButton"
+          show.bind="activateClearButton"
           click.trigger="clearButtonClicked()"
           ><i
             class="text-field__icon-clear fas fa-times text-field__transparent-bg-color text-field__pointer-cursor"
