--- a/src/components/combobox.css
+++ b/src/components/combobox.css
@@ -50,6 +50,7 @@
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.151);
   border-radius: 2%;
+  z-index: 500;
 }
 
 .combobox__drop-down-list > div {
