--- a/src/components/date-picker.css
+++ b/src/components/date-picker.css
@@ -1,4 +1,4 @@
-.text-field__container {
+.date-picker__container {
   box-sizing: border-box;
   display: flex;
   flex: 1;
@@ -6,105 +6,105 @@
   min-height: 56px;
 }
 
-.text-field__transparent-bg-color {
+.date-picker__transparent-bg-color {
   background-color: transparent !important;
 }
 
-.text-field__transparent-bg-color:hover {
+.date-picker__transparent-bg-color:hover {
   background-color: transparent !important;
 }
 
-.text-field__pointer-cursor:hover {
+.date-picker__pointer-cursor:hover {
   cursor: pointer;
 }
 
-.text-field__red-border {
+.date-picker__red-border {
   border-bottom: 1px solid #ff0000;
 }
 
-.text-field__normal-border {
+.date-picker__normal-border {
   width: 100%;
   border-bottom: 1px solid #c0bebe;
 }
 
-.text-field__error-message {
+.date-picker__error-message {
   color: red;
 }
 
-.text-field__error-message-container-inactive  {
+.date-picker__error-message-container-inactive  {
   max-height: 0px;
   transition: max-height 1s ease;
   overflow: hidden;
 }
 
-.text-field__error-message-container-active {
+.date-picker__error-message-container-active {
   max-height: 29px;
   transition: max-height 1s ease;
   overflow: hidden;
 }
 
-.text-field__container:hover .date-picker__input-container * {
+.date-picker__container:hover .date-picker__input-container * {
   animation-name: textFieldInputHighlight;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-.text-field__container:hover .text-field__label-element {
+.date-picker__container:hover .date-picker__label-element {
   animation-name: textFieldBlueHighlight ;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-.text-field__container:hover .text-field__tooltip-icon {
+.date-picker__container:hover .date-picker__tooltip-icon {
   animation-name: textFieldBlueHighlight ;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-.text-field__container .text-field__label-container {
+.date-picker__container .date-picker__label-container {
   display: flex;
   flex: 1;
   flex-direction: row;
   min-height: 25px;
 }
 
-.text-field__container .text-field__label-icon-container {
+.date-picker__container .date-picker__label-icon-container {
   display: flex;
   flex-direction: row;
   max-height: 100%;
   margin-left: auto;
 }
 
-.text-field__container .text-field__tooltip-icon {
+.date-picker__container .date-picker__tooltip-icon {
   margin-top: 4px;
   font-size: 20px;
   color: rgba(5, 5, 5, 0.61);
 }
 
-.text-field__tooltip-icon-link {
+.date-picker__tooltip-icon-link {
   padding-right: 5px;
 }
 
-.text-field__icon-clear {
+.date-picker__icon-clear {
   font-size: 22px;
   color: rgba(5, 5, 5, 0.61);
 }
 
-.text-field__container:hover .text-field__icon-clear {
+.date-picker__container:hover .date-picker__icon-clear {
   animation-name: comboboxBlueHighlight;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-.text-field__tooltip-element-label {
+.date-picker__tooltip-element-label {
   font-weight: bold;
 }
 
-.text-field__label-container .text-field__label-element {
+.date-picker__label-container .date-picker__label-element {
   color: rgba(5, 5, 5, 0.61);
 }
 
-.text-field__input-icons-container {
+.date-picker__input-icons-container {
   box-sizing: border-box;
   height: 100%;
   overflow: hidden;
@@ -117,7 +117,7 @@
   min-height: 38px;
 }
 
-.text-field__container input {
+.date-picker__container input {
   display: flex;
   flex: 1;
 
@@ -125,11 +125,11 @@
   border: none;
 }
 
-.text-field__container input:focus {
+.date-picker__container input:focus {
   outline: none;
 }
 
-.text-field__container div[slot="suffix-container"] {
+.date-picker__container div[slot="suffix-container"] {
   max-height: 100%;
   display: flex;
   align-items: center;
@@ -145,7 +145,7 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.text-field__required {
+.date-picker__required {
   color: rgba(255, 0, 0, 0.692);
 }
 
