dateSelected added so that current date or user's choice of date is formated right in selected-date-div

--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -2,7 +2,7 @@
     <require from="./calendar.css"></require>
 
   <div class="calendar" ref="calendarButton">
-    <div class="selected-date">30 / 07 / 2020</div>
+    <div class="selected-date">${dateSelected}</div>
 
     <div class="dates" show.bind="visible">
       <div class="month">
