calendar dates populated

--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -12,20 +12,7 @@
       </div>
 
       <div class="days">
-        <div class="day">1</div>
-        <div class="day">2</div>
-        <div class="day">3</div>
-        <div class="day">4</div>
-        <div class="day">5</div>
-        <div class="day">6</div>
-        <div class="day">7</div>
-        <div class="day">1</div>
-        <div class="day">2</div>
-        <div class="day">3</div>
-        <div class="day">4</div>
-        <div class="day">5</div>
-        <div class="day">6</div>
-        <div class="day">7</div>
+        <div class="day" repeat.for="day of daysOfMonth">${day}</div>
       </div>
     </div>
   </div>
